# tenferro-einsum-benchmark

./: .gitignore  Cargo.toml  README.md  pyproject.toml
data/instances/: bin_batched_matmul_b32_m64_n64_k64.json  bin_elementwise_mul_2048x2048.json  bin_matmul_256.json  bin_outer_product_4096.json  gm_queen5_5_3.wcsp.json  lm_batch_likelihood_brackets_4_4d.json  lm_batch_likelihood_sentence_3_12d.json  lm_batch_likelihood_sentence_4_4d.json  str_matrix_chain_multiplication_100.json  str_mps_varying_inner_product_200.json  str_nw_mera_closed_120.json  str_nw_mera_open_26.json  tensornetwork_permutation_focus_step409_316.json  tensornetwork_permutation_light_415.json
scripts/: benchmark_python.py  convert_tensornetwork.py  create_lightweight_instance.py  format_results.py  generate_dataset.py  run_all.sh  run_all_julia.sh  run_all_python.sh  run_all_rust.sh
src/: lib.rs  main.rs
