[package]
name = "tenferro-einsum-benchmark"
version = "0.1.0"
edition = "2021"
description = "Benchmark suite for tenferro-einsum based on einsum benchmark"

[dependencies]
tenferro          = { path = "../tenferro-rs/tenferro" }
tenferro-einsum   = { path = "../tenferro-rs/tenferro-einsum" }
tenferro-tensor   = { path = "../tenferro-rs/tenferro-tensor" }
tenferro-ops      = { path = "../tenferro-rs/tenferro-ops" }
tenferro-device   = { path = "../tenferro-rs/tenferro-device" }
computegraph      = { git = "https://github.com/tensor4all/computegraph-rs.git", rev = "c20e8912560ef11166418bcea089126ef50443cc" }
num-complex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
