[project]
name = "tenferro-einsum-benchmark"
version = "0.1.0"
description = "Benchmark suite for tenferro-einsum based on einsum benchmark"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einsum-benchmark>=0.1.7",
    "jax>=0.10.1",
    "opt-einsum>=3.4.0",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
]
